// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Accepted story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 1024 1024"
          width="1em"
        >
          <path
            d="M512.1,895.9 C300.3,895.9 128.1,723.8 128.1,511.9 C128.1,300.2 300.3,127.9 512.1,127.9 C723.8,127.9 896,300.2 896.1,511.9 C896.1,723.7 723.8,895.9 512.1,895.9 M512.1,0 C229.7,0 0,229.7 0,512 C0,794.3 229.7,1024 512.1,1024 C794.3,1024 1024,794.3 1024,512 C1024,229.7 794.3,0 512.1,0 M704,288 L704,272 C704,263.2 696.8,256 688,256 L336,256 C327.2,256 320,263.2 320,272 L320,288 C320,447 480,449 480,512 C480,575 320,575 320,736 L320,752 C320,760.8 327.2,768 336,768 L688,768 C696.8,768 704,760.8 704,752 L704,736 C704,576 544,577 544,512 C544,447 704,448 704,288 M603.9,704 L420.3,704 C417.3,704 418.2,695 419.4,686.8 C426.8,634.5 480.1,617.4 495.2,612.3 C512.3,606.6 512.3,606.6 528.9,612.3 C544,617.6 597.6,635.4 604.8,687 C605.9,695.2 606.9,704 603.9,704"
          />
        </svg>
      </div>
      <div
        class=""
      >
        Creation pending
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Deleting story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class=""
      >
        Deletion in progress
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Deprovision story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class=""
      >
        Deletion in progress
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Failed story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <svg
          aria-hidden="true"
          class="appservices_kafka-instance-status_icon--failed"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          />
        </svg>
      </div>
      <div
        class=""
      >
        Failed
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Preparing story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <span
          aria-valuetext="Creation in progress"
          class="pf-c-spinner pf-m-md"
          role="progressbar"
        >
          <span
            class="pf-c-spinner__clipper"
          />
          <span
            class="pf-c-spinner__lead-ball"
          />
          <span
            class="pf-c-spinner__tail-ball"
          />
        </span>
      </div>
      <div
        class=""
      >
        Creation in progress
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Provisioning story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <span
          aria-valuetext="Creation in progress"
          class="pf-c-spinner pf-m-md"
          role="progressbar"
        >
          <span
            class="pf-c-spinner__clipper"
          />
          <span
            class="pf-c-spinner__lead-ball"
          />
          <span
            class="pf-c-spinner__tail-ball"
          />
        </span>
      </div>
      <div
        class=""
      >
        Creation in progress
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders Ready story 1`] = `
<body>
  <div>
    <div
      class="pf-l-flex pf-m-inline-flex"
    >
      <div
        class="pf-m-spacer-sm"
      >
        <svg
          aria-hidden="true"
          class="appservices_kafka-instance-status_icon--completed"
          fill="currentColor"
          height="1em"
          role="img"
          style="vertical-align: -0.125em;"
          viewBox="0 0 512 512"
          width="1em"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          />
        </svg>
      </div>
      <div
        class=""
      >
        Ready
      </div>
    </div>
  </div>
</body>
`;
